feat. modify api-document for comments apis
